tests/semantic_errors/andrei28_3.tl
require "ifj21"


name1()

global name : function (integer) : string, string, string
global name1 : function (integer) : string, string, string
global name2 : function (integer) : string, string, string
global name3 : function (integer) : string, string, string
function name    (a : integer) : string, string, string
end

function main()
    local id : integer = 102

end

main()
